@@ -1,7 +1,7 @@
 /* doc.h -- Structures associating function pointers with documentation.
    $Id$
 
-   Copyright 1993, 2001, 2004, 2007, 2011, 2013
+   Copyright 1993, 2001, 2004, 2007, 2011, 2013, 2014
    Free Software Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
@@ -22,7 +22,7 @@
 #if !defined (DOC_H)
 #define DOC_H
 
-#include "info.h" /* for NAMED_FUNCTIONS, VFunction, etc.  */
+#include "info.h"
 
 #if defined (INFOKEY)
 /* For each function, we keep track of the first defined key sequence
@@ -46,7 +46,6 @@ typedef struct function_keyseq
 
 #endif /* INFOKEY */
 
-
 /* An array of FUNCTION_DOC structures is defined in doc.c, which is
    automagically generated by the makedoc utility, whose job is to scan
    through the source files for command function declarations and
@@ -55,9 +54,7 @@ typedef struct function_keyseq
 typedef struct
 {
   VFunction *func;
-#if defined (NAMED_FUNCTIONS)
   char *func_name;
-#endif /* NAMED_FUNCTIONS */
 #if defined (INFOKEY)
   FUNCTION_KEYSEQ *keys;
 #endif /* INFOKEY */
@@ -87,10 +84,8 @@ typedef VFunction InfoCommand;
 
 #include "infomap.h" /* for Keymap.  */
 
-#if defined (NAMED_FUNCTIONS)
 extern char *function_name (InfoCommand *cmd);
 extern InfoCommand *named_function (char *name);
-#endif /* NAMED_FUNCTIONS */
 
 extern char *function_documentation (InfoCommand *cmd);
 extern char *pretty_keyname (unsigned char key);
